--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,7 @@
 language: generic
+services: docker
+script:
+ - touch .gitignore
+ - >
+  sudo docker run --volume=$(pwd):/app --workdir=/app coala/base:pre /bin/bash -c
+   "coala-quickstart --ci; coala --ci"
